# proj1

./: CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  README.md  package.xml  proj1.qmlproject  proj1.qmlproject.qtds  qml.qrc  qmlcomponents  qmlmodules  qtquickcontrols2.conf  simplequick.qm  simplequick.ts
Desktop_Qt/: CMakeCache.txt  CTestConfiguration.ini  qtcsettings.cmake
Desktop_Qt/catkin_generated/: generate_cached_setup.py
Desktop_Qt/catkin_generated/installspace/: _setup_util.py
Desktop_Qt/devel/: .rosinstall  local_setup.sh
Desktop_Qt_6_7_1-Debug/: .ninja_log  CTestTestfile.cmake  build.ninja  cmake_install.cmake  qrc_qml.cpp  simplequick.qm  simplequick.qrc.depends
Desktop_Qt_6_7_1-Debug/.qt/deploy_qml_imports/: proj1App.cmake  proj1_node.cmake
Desktop_Qt_6_7_1-Debug/.qt/qml_imports/: proj1App_conf.cmake  proj1_node_conf.rsp
Desktop_Qt_6_7_1-Debug/.qt/rcc/: proj1_node_raw_qml_0.qrc  qrc_proj1App_raw_qml_0.cpp  qrc_qmake_backendqt.cpp
Desktop_Qt_6_7_1-Debug/.qtc_clangd/: compile_commands.json
Desktop_Qt_6_7_1-Debug/.rcc/qmlcache/: proj1App_qmlcache_loader.cpp  proj1_node_main_qml.cpp
Desktop_Qt_6_7_1-Debug/.rcc/qmllint/: proj1App.rsp  proj1App_module.rsp
Desktop_Qt_6_7_1-Debug/atomic_configure/: setup.sh
Desktop_Qt_6_7_1-Debug/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
Desktop_Qt_6_7_1-Debug/catkin_generated/installspace/: proj1_nodeConfig.cmake  setup.sh
Desktop_Qt_6_7_1-Debug/content/: cmake_install.cmake
Desktop_Qt_6_7_1-Debug/devel/: .catkin  .rosinstall
Desktop_Qt_6_7_1-Debug/gtest/: CTestTestfile.cmake
Desktop_Qt_6_7_1-Debug/gtest/googlemock/: CTestTestfile.cmake
Desktop_Qt_6_7_1-Debug/gtest/googletest/: CTestTestfile.cmake
Desktop_Qt_6_7_1-Debug/imports/: cmake_install.cmake
Desktop_Qt_6_7_1-Debug/imports/proj1/: cmake_install.cmake  proj1_qmltyperegistrations.cpp  proj1plugin_proj1Plugin.cpp  proj1plugin_proj1Plugin_in.cpp
Desktop_Qt_6_7_1-Debug/meta_types/: proj1App_json_file_list.txt  proj1_node_json_file_list.txt.timestamp
Desktop_Qt_6_7_1-Debug/proj1App_autogen/: moc_predefs.h
Desktop_Qt_6_7_1-Debug/proj1App_autogen/EWIEGA46WW/: moc_backend.cpp.d  moc_backend.cpp.json
Desktop_Qt_6_7_1-Debug/proj1_node_autogen/: moc_predefs.h  mocs_compilation.cpp
Desktop_Qt_6_7_1-Debug/proj1_node_autogen/7PH6M6IPMC/: moc_backend.cpp.d
Desktop_Qt_6_7_1-Debug/proj1_node_autogen/include/: main.moc.d  main.moc.json
Desktop_Qt_6_7_1-Debug/proj1_qds_components_autogen/: deps
Desktop_Qt_6_7_1-Debug/qml/Main/: proj1App.qmltypes  (+1 more)
atomic_configure/: .rosinstall  setup.sh
catkin_generated/: generate_cached_setup.py  setup_cached.sh
content/: App.qml  CMakeLists.txt  Screen02.ui.qml  component_test.ui.qml
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
imports/: CMakeLists.txt
imports/proj1/: CMakeLists.txt  qmldir
launch/: node.launch
src/: backend.cpp  import_qml_components_plugins.h  import_qml_plugins.h  main.cpp
src/include/: backend.h
(+560 files in other folders)
