<?xml version="1.0"?>
<package format="2">
  <name>proj1_node</name>
  <version>0.0.0</version>
  <description>The proj1_node package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>qt5-webkit</depend>
  <depend>qt5-declarative</depend>
  <depend>std_msgs</depend>
  <depend>std_stamped_msgs</depend>

  <export>
  </export>
</package>
